# AiOps

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.claude/: settings.local.json
aiops/: __init__.py  exceptions.py
config/: agents.yaml
data/: sample_knowledge.md
docker/: otel-collector.yml
docs/: DEVELOPMENT.md  README.md  agent_skills_design.md  aiops_agent_design.md  aiops_complete_design.md  api.md  api_reference.md  architecture.md  architecture_analysis.md  architecture_optimization_proposals.md  demo_docker_compose.md  deployment.md  deployment_guide_skills.md  dynamic_skill_registration_system.md  implementation_plan.md  intelligent_customer_service_design.md  intent_lora_finetuning_plan.md  intent_recognition_research_proposal.md  quickstart.md  skills_self_learning_analysis.md  skills_self_learning_implementation_tasks.md  skills_self_learning_implementation_tasks_v2.md  skills_self_learning_system_design.md  skills_self_learning_system_design_v2.md  task_orchestration_design.md  user_guide.md
knowledge/: processor.py  retriever.py  vector_store.py
scripts/: backup_skills.sh  debug_customer_service.py  debug_knowledge_agent.py  deploy_skills.sh  ingest_docs.py  ingest_knowledge.py  test_classification_metrics.py  test_customer_service.py  test_deepseek.py  test_knowledge_agent.py  verify_retrieval.py
tests/: test_agents.py  test_cache_stage2_task2.py  test_config.py  test_error_handling_stage1_task2.py  test_escalation.py  test_event_bus_stage2_task3.py  test_skills_api.py  (+26 more)
(+123 files in other folders)
