[project]
name = "aiops"
version = "0.1.0"
description = "Production-ready AIOps system with human-in-the-loop approval for monitoring and remediation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=1.0.1",
    "langchain[openai]>=1.2.10",
    "langgraph>=1.0.10",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "networkx>=3.6.1",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "litellm>=1.82.0",
    "langchain-community>=0.4.1",
    "watchfiles>=1.1.1",
    "langchain-litellm>=0.6.1",
    "langgraph-cli[inmem]>=0.4.15",
    "chromadb",
    "sentence-transformers",
    "langchain-chroma>=1.1.0",
    "unstructured>=0.21.5",
    "markdown>=3.10.2",
]
